--- a/ansible-scripts/roles/service/vars/main.yml
+++ b/ansible-scripts/roles/service/vars/main.yml
@@ -1,13 +1,14 @@
 ---
-application_source: /opt/application/deployables/demo
-package_name: "demo"
+application_source: /Users/AnkurKS/my-workspace/sample-springboot-rest
+package_name: demo
 application_dir: /opt/application
 deploy_dir: "{{application_dir}}/deployables"
 logs_dir: "{{application_dir}}/logs"
 conf_dir: "{{application_dir}}/conf"
-jar_name: demo-1.0-SNAPSHOT.jar
+jar_name: sample-springboot-rest-1.0-SNAPSHOT.jar
 log_file_name: demo.log
 std_out_log_file_name: demo.out
 std_err_log_file_name: demo.err
 error_log_file_name: demo_error.log
 pids_dir: "{{application_dir}}/pids"
+application_source_new: /opt/application/deployables/demo
